<resources>
    <string name="app_name">MyAccesoriesApp</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?Signup</string>
    <string name="Login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="signup">Signup</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_your_email">Enter your email</string>
</resources>